<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Nazeel-Project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencies>

        <dependency>
        <groupId>io.cucumber</groupId>
        <artifactId>cucumber-testng</artifactId>
        <version>7.15.0</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.15.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.18.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>maven-cucumber-reporting</artifactId>
            <version>5.8.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.7.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.microsoft.edge/msedge-selenium-tools-java -->
<!--        <dependency>-->
<!--            <groupId>com.microsoft.edge</groupId>-->
<!--            <artifactId>msedge-selenium-tools-java</artifactId>-->
<!--            <version>3.141.1</version>-->
<!--        </dependency>-->
        <dependency>
        <groupId>com.github.javafaker</groupId>
        <artifactId>javafaker</artifactId>
        <version>1.0.2</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/plugins.html -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <runOrder>Alphabetical</runOrder>
                    <includes>
                        <include>**/*Runners.java</include> <!-- this should be the name of your runner class -->
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <!-- https://repo.maven.apache.org/maven2/net/masterthought/cucumber-reporting/ -->
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.7.4</version>
                <executions>
                    <execution>
                        <id>execution</id>
                          <phase>test</phase>
                           <goals>
                               <goal>generate</goal>
                           </goals>
                           <configuration>
                               <projectName>Nazeel-Project</projectName>
                               <outputDirectory>${project.build.directory}</outputDirectory>
                               <inputDirectory>${project.build.directory}</inputDirectory>
                               <jsonFiles>
                                   <param>**/cucumber*.json</param>
                               </jsonFiles>
                           </configuration>
                       </execution>
                   </executions>
               </plugin>


           </plugins>
       </build>

   </project>